moved footer to a div container in app-root to fix double scrollbar issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@
 	border-color: grey ;
 	border-style: ridge ;
 	display: grid ;
-	grid: 30px auto / 120px auto ;
+	grid: 30px auto 30px / 120px auto ;
 	grid-row-gap: 6px ;
 	height: 100% ;
 	padding-bottom: 6px ;
@@ -45,4 +45,7 @@
 	border-color: orange ;
 	background-color: #fff ;
 	background-color: RGBA(100,100,100,0.5) ;
+}
+.footer {
+  grid-area: 3 / 1 / 1 / span 2 ;
 }
